--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,9 @@ paragraph= Libreria Oficial del Controlador Vergatario, desarrollado por el Cent
 category=Others
 architectures=*
 url=https://github.com/CDTParaguana
+Controlador_Vergatario/
+Controlador_Vergatario/src/
+Controlador_Vergatario/src/cdt.cpp
+Controlador_Vergatario/src/cdt.h
+Controlador_Vergatario/Leeme.txt
+Controlador_Vergatario/Library.properties
