--- a/library.properties
+++ b/library.properties
@@ -13,3 +13,4 @@ Controlador_Vergatario/src/cdt.cpp
 Controlador_Vergatario/src/cdt.h
 Controlador_Vergatario/Leeme.txt
 Controlador_Vergatario/Library.properties
+Controlador_Vergatario/README.md
