--- a/library.properties
+++ b/library.properties
@@ -7,6 +7,8 @@ paragraph= Libreria Oficial del Controlador Vergatario, desarrollado por el Cent
 category=Others
 architectures=*
 url=https://github.com/CDTParaguana
+includes=cdt.h
+depends=*
 Controlador_Vergatario/
 Controlador_Vergatario/src/
 Controlador_Vergatario/src/cdt.cpp
